crates/carta/tests/snapshots/odt__corpus__table__table-cell-boundary-space.snap
---
source: crates/carta/tests/odt.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<office:document-content xmlns:office="urn:oasis:names:tc:opendocument:xmlns:office:1.0" xmlns:style="urn:oasis:names:tc:opendocument:xmlns:style:1.0" xmlns:text="urn:oasis:names:tc:opendocument:xmlns:text:1.0" xmlns:table="urn:oasis:names:tc:opendocument:xmlns:table:1.0" xmlns:draw="urn:oasis:names:tc:opendocument:xmlns:drawing:1.0" xmlns:fo="urn:oasis:names:tc:opendocument:xmlns:xsl-fo-compatible:1.0" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:meta="urn:oasis:names:tc:opendocument:xmlns:meta:1.0" xmlns:number="urn:oasis:names:tc:opendocument:xmlns:datastyle:1.0" xmlns:svg="urn:oasis:names:tc:opendocument:xmlns:svg-compatible:1.0" xmlns:math="http://www.w3.org/1998/Math/MathML" office:version="1.3">
<office:scripts />
<office:font-face-decls>
<style:font-face style:name="Courier New" style:font-family-generic="modern" style:font-pitch="fixed" svg:font-family="'Courier New'" />
</office:font-face-decls>
<office:automatic-styles>
<style:style style:name="TableHeaderRowCell" style:family="table-cell">
<style:table-cell-properties fo:border="none" />
</style:style>
<style:style style:name="TableRowCell" style:family="table-cell">
<style:table-cell-properties fo:border="none" />
</style:style>
<style:style style:name="Table1" style:family="table">
<style:table-properties table:align="center" />
</style:style>
<style:style style:name="Table1.A" style:family="table-column" />
<style:style style:name="Table1.B" style:family="table-column" />
<style:style style:name="Table1.C" style:family="table-column" />
</office:automatic-styles>
<office:body>
<office:text>
<table:table table:name="Table1" table:style-name="Table1">
<table:table-column table:style-name="Table1.A" />
<table:table-column table:style-name="Table1.B" />
<table:table-column table:style-name="Table1.C" />
<table:table-header-rows>
<table:table-row>
<table:table-cell table:style-name="TableHeaderRowCell" office:value-type="string">
<text:p text:style-name="Table_20_Heading">col1</text:p>
</table:table-cell>
<table:table-cell table:style-name="TableHeaderRowCell" office:value-type="string">
<text:p text:style-name="Table_20_Heading">col2 </text:p>
</table:table-cell>
<table:table-cell table:style-name="TableHeaderRowCell" office:value-type="string">
<text:p text:style-name="Table_20_Heading">col3</text:p>
</table:table-cell>
</table:table-row>
</table:table-header-rows>
<table:table-row>
<table:table-cell table:style-name="TableRowCell" office:value-type="string">
<text:p text:style-name="Table_20_Contents"> a </text:p>
</table:table-cell>
<table:table-cell table:style-name="TableRowCell" office:value-type="string">
<text:p text:style-name="Table_20_Contents">spaced text </text:p>
</table:table-cell>
<table:table-cell table:style-name="TableRowCell" office:value-type="string">
<text:p text:style-name="Table_20_Contents">trailing </text:p>
</table:table-cell>
</table:table-row>
</table:table>
</office:text>
</office:body>
</office:document-content>
